--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     }
 
     .detail-image {
+
         display: flex;
         justify-content: center;
+    }
+    #image{
+        width: 500px;
     }
 </style>
 
